--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^7.3.6",
     "imagekitio-react": "^2.0.0",
     "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.40",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
